Fix: logo image stretching vertically

--- a/src/sphinx_book_theme/assets/styles/components/_logo.scss
+++ b/src/sphinx_book_theme/assets/styles/components/_logo.scss
@@ -16,4 +16,8 @@
     white-space: normal;
     text-align: center;
   }
+  // Prevent images from stretching vertically 
+  .logo__image {
+    height: unset;
+  }
 }
